# DiscordMusicBot

./: Cargo.toml  README.md  rustfmt.toml
docs/: installation_guide.md
src/: client.rs  commands.rs  config.rs  errors.rs  main.rs
