[package]
name = "DiscordBot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"      # optimize for size (or "s")
lto = true           # link-time optimization
codegen-units = 1    # better optimization, smaller binary
panic = "abort"      # remove unwinding machinery
strip = true         # remove debug symbols

[dependencies]
which = "8.0.2"
dotenvy = { version = "0.15.7" }
poise = { version = "0.6.2" }
songbird = {version = "0.6.0", features = ["builtin-queue"]}
symphonia = { version = "0.5", features = [
    "aac",    # for m4a/AAC
    "mp3",    # if yt-dlp ever picks an MP3
    "vorbis", # for Ogg/Vorbis
    "flac",   # for FLAC streams
    "isomp4", # for fragmented MP4/HLS support
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
